--- a/style.css
+++ b/style.css
@@ -3725,7 +3725,7 @@ a:focus .bbg__article-share__icon {
           width: 100%;
           bottom: 0;
           position: absolute;
-          background: linear-gradient(rgba(0, 0, 0, 0), 75%, rgba(0, 0, 0, 0.9)); }
+          background: linear-gradient(transparent, 75%, rgba(0, 0, 0, 0.9)); }
       .cards .cards__fixed .cards__wrapper .cards__header {
         position: absolute;
         width: 100%;
@@ -3891,7 +3891,7 @@ a:focus .bbg__article-share__icon {
       -webkit-line-clamp: 3;
       -webkit-box-orient: vertical; }
     .cards.cards--events .cards__fixed .cards__wrapper .cards__backdrop .cards__backdrop-shadow {
-      background: linear-gradient(rgba(0, 0, 0, 0), 75%, rgba(0, 0, 0, 0.9)); }
+      background: linear-gradient(transparent, 75%, rgba(0, 0, 0, 0.9)); }
     .cards.cards--events .cards__flexible .cards__excerpt .cards__date {
       color: #002a53;
       padding: 16px 16px 0 16px;
@@ -4668,7 +4668,7 @@ a:focus .bbg__article-share__icon {
 
 @media screen and (min-width: 600px) {
   .cards .cards__fixed .cards__wrapper .cards__backdrop .cards__backdrop-shadow {
-    background: linear-gradient(rgba(0, 0, 0, 0), 85%, rgba(0, 0, 0, 0.9)); }
+    background: linear-gradient(transparent, 85%, rgba(0, 0, 0, 0.9)); }
   .cards.cards--layout-split .cards__footer h3 {
     font-size: 1.5rem; }
   .cards.cards--layout-split .cards__footer p {
@@ -5248,7 +5248,7 @@ a:focus .bbg__article-share__icon {
 
 @media screen and (min-width: 900px) {
   .cards .cards__fixed .cards__wrapper .cards__backdrop .cards__backdrop-shadow {
-    background: linear-gradient(rgba(0, 0, 0, 0), 90%, rgba(0, 0, 0, 0.9)); }
+    background: linear-gradient(transparent, 90%, rgba(0, 0, 0, 0.9)); }
   .cards.cards--layout-split .cards__footer h3 {
     font-size: 2rem; }
   .cards.cards--layout-split .cards__footer p {
@@ -6700,7 +6700,7 @@ button#bbg__menu-toggle {
       position: absolute;
       top: 11.5rem;
       right: 0;
-      text-align: center;
+      text-align: right;
       margin: 0;
       padding-left: 5%;
       width: 100%; }
@@ -6761,8 +6761,7 @@ button#bbg__menu-toggle {
 
 @media screen and (min-width: 1201px) {
   .bbg__main-navigation .menu-usagm-container {
-    padding-left: 10%;
-    padding-right: 10%; } }
+    padding-left: 25%; } }
 
 .avatar-container {
   text-align: center; }
